--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -23,6 +23,8 @@ a:hover {
 }
 
 body {
+  background-color: #4aa8a3 !important;
+  color: whitesmoke !important;
   margin: 0;
   display: flex;
   place-items: center;
