--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -47,15 +47,22 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 0.3rem !important;
+  border-radius: 5px !important;
 }
 button:hover {
   border-color: #646cff;
+  
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.hover {
+  cursor: pointer;
+  font-style:oblique;
+}
 .card {
   padding: 2em;
 }
